lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:29: error: type mismatch;
 found   : Unit
 required: Int
	else if ( getX() >= zone(1).x) {return 2}
             ^